Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -95,10 +95,10 @@
       ],
       "metadata": {
         "id": "0qZX8_ZQBYyk",
-        "outputId": "cc198f41-5205-49d9-e391-95fbc5a939f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cc198f41-5205-49d9-e391-95fbc5a939f8"
       },
       "execution_count": 1,
       "outputs": [
@@ -118,10 +118,10 @@
       ],
       "metadata": {
         "id": "GLMzF_AKBY7a",
-        "outputId": "033573cf-8589-4d09-f5a5-b413be52d174",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "033573cf-8589-4d09-f5a5-b413be52d174"
       },
       "execution_count": 2,
       "outputs": [
@@ -141,11 +141,11 @@
         "print('Apellido: Darcia')"
       ],
       "metadata": {
-        "id": "633n5N5Ly-OH",
-        "outputId": "bf6d46fd-17ec-44e4-e7fa-0329b551e113",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "633n5N5Ly-OH",
+        "outputId": "bf6d46fd-17ec-44e4-e7fa-0329b551e113"
       },
       "execution_count": 3,
       "outputs": [
@@ -170,11 +170,11 @@
         "print('a')"
       ],
       "metadata": {
-        "id": "tevlXfv4zSTc",
-        "outputId": "78344f2a-80cd-4f94-fb13-3dbd664c413e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tevlXfv4zSTc",
+        "outputId": "78344f2a-80cd-4f94-fb13-3dbd664c413e"
       },
       "execution_count": 4,
       "outputs": [
@@ -198,11 +198,11 @@
         "print(27,'mayo',1995)"
       ],
       "metadata": {
-        "id": "i5Q48QCLzpsA",
-        "outputId": "3a54ce65-43e7-4edb-85e1-80f3b7dd68ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "i5Q48QCLzpsA",
+        "outputId": "3a54ce65-43e7-4edb-85e1-80f3b7dd68ab"
       },
       "execution_count": 5,
       "outputs": [
@@ -221,11 +221,11 @@
         "print('Año actual:',2025)"
       ],
       "metadata": {
-        "id": "20HkDZhVz5gB",
-        "outputId": "59a5148c-2064-42a7-b693-a67c8da48cb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "20HkDZhVz5gB",
+        "outputId": "59a5148c-2064-42a7-b693-a67c8da48cb2"
       },
       "execution_count": 6,
       "outputs": [
@@ -401,10 +401,10 @@
       ],
       "metadata": {
         "id": "FabQ7jQf_8Xt",
-        "outputId": "0d3475f4-1ee1-4dab-c5f5-df8b22bdca9e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0d3475f4-1ee1-4dab-c5f5-df8b22bdca9e"
       },
       "execution_count": 7,
       "outputs": [
@@ -485,10 +485,10 @@
       ],
       "metadata": {
         "id": "gKmBbhII_5b9",
-        "outputId": "83d18351-1bf1-46ce-a68d-597ce7ff2fa2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "83d18351-1bf1-46ce-a68d-597ce7ff2fa2"
       },
       "execution_count": 10,
       "outputs": [
@@ -512,10 +512,10 @@
       ],
       "metadata": {
         "id": "fIugsxNy_53j",
-        "outputId": "ce382da4-628b-4390-92b8-621ec847fd44",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ce382da4-628b-4390-92b8-621ec847fd44"
       },
       "execution_count": 11,
       "outputs": [
@@ -538,11 +538,11 @@
         "promedio_salarios\n"
       ],
       "metadata": {
-        "id": "uxG7CUx39QQR",
-        "outputId": "2c95c769-834f-4b3b-d157-d4c6330a840b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uxG7CUx39QQR",
+        "outputId": "2c95c769-834f-4b3b-d157-d4c6330a840b"
       },
       "execution_count": 12,
       "outputs": [
@@ -586,10 +586,10 @@
       ],
       "metadata": {
         "id": "ityEWqvh_2wK",
-        "outputId": "79bbb0dc-067c-4e83-acd4-0e0d3c252e38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "79bbb0dc-067c-4e83-acd4-0e0d3c252e38"
       },
       "execution_count": 13,
       "outputs": [
@@ -640,10 +640,10 @@
       ],
       "metadata": {
         "id": "icDWtYTjBO0n",
-        "outputId": "fdb50b38-fd07-4320-c61e-10417b36d34e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fdb50b38-fd07-4320-c61e-10417b36d34e"
       },
       "execution_count": 14,
       "outputs": [
@@ -689,11 +689,11 @@
       ],
       "metadata": {
         "id": "wMVshJrY_ZXh",
-        "outputId": "fca1ae61-060c-4c45-ea7e-c71a7dd251d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "fca1ae61-060c-4c45-ea7e-c71a7dd251d1"
       },
       "execution_count": 15,
       "outputs": [
@@ -729,11 +729,11 @@
       ],
       "metadata": {
         "id": "px3yEeNH_YK4",
-        "outputId": "83c96c82-4ebe-4727-e904-4f9d876b3b10",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "83c96c82-4ebe-4727-e904-4f9d876b3b10"
       },
       "execution_count": 16,
       "outputs": [
@@ -769,11 +769,11 @@
       ],
       "metadata": {
         "id": "76dLgNa4_XAe",
-        "outputId": "55bb1795-a15b-45f2-d138-27617f3472c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "55bb1795-a15b-45f2-d138-27617f3472c5"
       },
       "execution_count": 17,
       "outputs": [
@@ -810,11 +810,11 @@
       ],
       "metadata": {
         "id": "PNXAixtE_V6R",
-        "outputId": "fbbb8a9a-1f65-479e-d40a-8e66fbdd0456",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "fbbb8a9a-1f65-479e-d40a-8e66fbdd0456"
       },
       "execution_count": 18,
       "outputs": [
@@ -870,12 +870,12 @@
         "texto"
       ],
       "metadata": {
-        "id": "INIIptCvAMWK",
-        "outputId": "273df143-d7fa-42d5-dfd3-59fee50c6ff3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "INIIptCvAMWK",
+        "outputId": "273df143-d7fa-42d5-dfd3-59fee50c6ff3"
       },
       "execution_count": 19,
       "outputs": [
@@ -900,11 +900,11 @@
         "id(texto)"
       ],
       "metadata": {
-        "id": "SnCuBOINAUBe",
-        "outputId": "60bf17c0-af7d-4685-93ee-592520c3b1a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SnCuBOINAUBe",
+        "outputId": "60bf17c0-af7d-4685-93ee-592520c3b1a4"
       },
       "execution_count": 20,
       "outputs": [
@@ -929,10 +929,10 @@
       ],
       "metadata": {
         "id": "ocPP-Jaj_SJI",
-        "outputId": "b21057a6-70a2-4c78-993f-fa9abf1ddab6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b21057a6-70a2-4c78-993f-fa9abf1ddab6"
       },
       "execution_count": 22,
       "outputs": [
@@ -954,11 +954,11 @@
         "print(id(texto), id(nuevo_texto))"
       ],
       "metadata": {
-        "id": "ZUfu4EURDFSi",
-        "outputId": "3d17b078-d54a-4bfc-9ed5-923a410077fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZUfu4EURDFSi",
+        "outputId": "3d17b078-d54a-4bfc-9ed5-923a410077fe"
       },
       "execution_count": 23,
       "outputs": [
@@ -987,21 +987,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombre= input('Escribe tu nombre:')"
+      ],
       "metadata": {
-        "id": "zbH_9i3q_PdY"
+        "id": "zbH_9i3q_PdY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "72c6842b-db4a-4ee7-a2e5-377e37652b61"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Escribe tu nombre:andrea\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(nombre)"
+      ],
       "metadata": {
-        "id": "JZy1Q9Tl_PgL"
+        "id": "JZy1Q9Tl_PgL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "04c03282-4cdd-4155-ab98-88ec5d860efe"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1030,27 +1061,107 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ano_admision= int(input('Digita el año de admisión:'))"
+      ],
       "metadata": {
-        "id": "M2ueeH6l_NMe"
+        "id": "M2ueeH6l_NMe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "64be1416-edf1-49a0-c947-f43b9bc08af6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digita el año de admisión:2023\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(ano_admision)"
+      ],
+      "metadata": {
+        "id": "xfWwuViK_NUn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "180bbd5b-4859-4fa7-a9ff-e715985c6771"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nota_admision= float(input('Digita la nota de admisión:'))"
+      ],
+      "metadata": {
+        "id": "uFCHDyew_NZm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d0675d7a-ef74-4c36-a8b3-1e5384f4de9f"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digita la nota de admisión:9.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(nota_admision)"
+      ],
+      "metadata": {
+        "id": "FogQ-5uyFNPr",
+        "outputId": "9d5b03dd-2997-4553-b126-2b8571b90a87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xfWwuViK_NUn"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "uFCHDyew_NZm"
+        "id": "RPRdH33XFXqx"
       },
       "execution_count": null,
       "outputs": []
@@ -1068,12 +1179,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(f'\\tEl año de admisión fue: {ano_admision} \\n\\tLa nota de admisión fue: {nota_admision}')"
+      ],
       "metadata": {
-        "id": "keJjA5N9_K5i"
+        "id": "keJjA5N9_K5i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "453899a2-ab45-4393-f7cb-cd402f05e835"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\tEl año de admisión fue: 2023 \n",
+            "\tLa nota de admisión fue: 9.5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
